--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <th>Minimum</th><th>Maximum</th><td>2 hours after eating</td>
         </tr>
         <tr>
-            <td>Healthy</td><td>70</td><td>100</td><td>Less thn 140</td>
+            <td>Healthy</td><td>70</td><td>100</td><td>Less than 140</td>
         </tr>
         <tr>
             <td>Pre-Diabetes</td><td>101</td><td>126</td><td>140 to 200</td>
